--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -226,23 +226,23 @@ stream_2 : "➲ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>‣ sᴛ
 
 CLOSE_BUTTON  : "✯ ¢ℓσѕє ✯"
 CLOSEMENU_BUTTON  : "✯ ¢ℓσѕє ✯"
-BACK_BUTTON : "✯ вα¢к ✯"
+BACK_BUTTON : "🔙 𝐁ᴀᴄᴋ 🛑"
 
-S_B_1 : "⚜ ᴧᴅᴅ ᴍᴇ ɪɴ ʏᴏᴜʀ ɴᴇᴡ ɢʀᴏᴜᴘ ⚜"
-S_B_2 : "💖𝐆𝐫𝐨𝐮𝐩💖"
-S_B_3 : "⚜ ᴧᴅᴅ ᴍᴇ ɪɴ ʏᴏᴜʀ ɴᴇᴡ ɢʀᴏᴜᴘ ⚜"
+S_B_1 : "😍 𝐓ᴀᴋᴇ 𝐌ᴇ 𝐁ᴀʙʏ 🤌🏻 😻"
+S_B_2 : "🍭 𝐆ʀᴏᴜᴘ ✨"
+S_B_3 : "😍 𝐓ᴀᴋᴇ 𝐌ᴇ 𝐁ᴀʙʏ 🤌🏻 😻"
 S_B_4 : "😍𝐅𝐞𝐚𝐭𝐮𝐫𝐞𝐬😍"
-S_B_5 : "⚜ ᴧᴅᴅ ᴍᴇ ɪɴ ʏᴏᴜʀ ɴᴇᴡ ɢʀᴏᴜᴘ ⚜"
+S_B_5 : "😍 𝐓ᴀᴋᴇ 𝐌ᴇ 𝐁ᴀʙʏ 🤌🏻 😻"
 S_B_6 : "✨𝐌𝐨𝐫𝐞✨"
 S_B_7 : "🤩𝐑𝐞𝐩𝐨🤩"
 S_B_8 : "👀𝐘𝐨𝐮𝐭𝐮𝐛𝐞👀"
-S_B_9 : "🥀𝐆𝐫𝐨𝐮𝐩🥀"
+S_B_9 : "🍭 𝐆ʀᴏᴜᴘ ✨"
 
-H_B_1 : "🍁αԃɱιɳ🍁"
-H_B_2 : "🔺αυƭɦ🔺"
+H_B_1 : "𝐀ᴅᴍɪɴ 🥷🏻"
+H_B_2 : "𝐀ᴜᴛʜ 💯"
 H_B_3 : "♨️вℓσ¢к♨️"
-H_B_4 : "📣ɠ¢αʂƭ📣"
-H_B_5 : "🍷ℓყɾเ¢ʂ🍷"
+H_B_4 : "𝐆 - 𝐂ᴀsᴛ 🧿"
+H_B_5 : "𝐋ʏʀɪᴄs 💌"
 H_B_6 : "🎙️քℓαყℓเʂƭ🎙️"
 H_B_7 : "🍁sᴛᴀᴛs🍁"
 H_B_8 : "🕹️ρℓαყ🕹️"
@@ -252,12 +252,12 @@ H_B_11 : "⚜️SƬΛᏒƬ⚜️"
 H_B_12 : "🚫ɠɓαɳ🚫"
 H_B_13 : "🔺ᴛᴀɢᴀʟʟ🔺"
 H_B_14 : "♨️sᴏɴɢ♨️"
-H_B_15 : "📣sᴘᴇᴇᴅ📣"
+H_B_15 : "⚡️𝐒ᴘᴇᴇᴅ⚡️"
 H_B_16 : "🚫ᴀᴄᴛɪᴏɴ🚫"
-H_B_17 : "🍷sᴛɪᴄᴋᴇʀ🍷"
+H_B_17 : "𝐒ᴛɪᴄᴋᴇʀs 💞"
 H_B_18 : "🎙️sʜᴀʏʀɪ🎙️"
 H_B_19 : "🎸ɪɴғᴏ🎸"
-H_B_20 : "🕹️ɢʀᴏᴜᴘ🕹️"
+H_B_20 : "🍭 𝐆ʀᴏᴜᴘ ✨"
 H_B_21 : "⚜️ᴇxᴛʀᴀ⚜️"
 H_B_22 : "🍸Iᴍᴀɢᴇ🍸"
 
